ACTIN-953: Inline annotation instead of post-processing
Modify CkbVariantAnnotator to work on individual KnownEvents.
Refactor ActionableEntry extraction in CkbExtractor.
Annotate KnownEvents immediately after consolidation instead of after the ExtractionResult is created.